2013-06-17  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/test/test_surface_param.m: (0.1.0)
	* Add matlab/PointsToolbox/surface_param.m: (0.1.0)

	- This function extracts the parametrization part of
	surface_interpolation(), that is going to be deprecated. I have
	changed the way you pass arguments to sphisomap to make it
	comparable to isomap. Now all optimization is done in the full
	disjkstra distance matrix. I have also simplified the code,
	merging the part about default and the part with the actual
	parametrization.

	* matlab/ThirdPartyToolbox/dijkstra.m: (0.3.1)
	* matlab/ThirdPartyToolbox/dijkstra.cpp: (0.3.1)

	- Small clarification in the help header.

2013-06-15  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.2.0)

	- Put the case loop outside, and then the loop for each file
	inside the particular cases. This allows us to use different find
	commands to list the files in each toolbox, suiting the different
	conventions of third party toolboxes.

	* matlab/add_gerardus_paths.m: (0.1.3)

	- Correct the paths to the Spharm toolbox.

	* matlab/add_gerardus_paths.m: (0.1.2)

	- Add paths to iso2mesh and Spharm toolboxes.

	* matlab/update_README.sh: (0.1.4)

	- Add special rule for third-party Spharm Toolbox.

	* Add matlab/ThirdPartyToolbox/SpharmToolbox: (1.0.0)

	- Fix bugs. Mostly the syntax for fileparts() with 4 output
	arguments is not valid, at least on Matlab 2012a for linux.

	- From the Li Shen Laboratory, Indiana University. Downloaded from
	http://imaging.indyrad.iupui.edu/projects/SPHARM/SPHARM-pack/SPHARM-MAT-v1-0-0.tar.gz

2013-06-14  Ramon Casero  <rcasero@gmail.com>

	* matlab/update_README.sh: (0.1.3)

	- The iso2mesh Toolbox has a different convention for the help
	headers. It's easier to add a special case to this script than
	modifiying all the help headers in iso2mesh.

	* Add matlab/ThirdPartyToolbox/iso2meshToolbox:

	- Version 2013 beta. By Qianqian Fang and David Boas. Website